syntax = "proto3";

package stack.token.v1;

import "google/protobuf/timestamp.proto";

// Token Service - JWT, OAuth tokens, refresh, revocation
service TokenService {
  // Token issuance
  rpc IssueAccessToken(IssueAccessTokenRequest) returns (TokenResponse);
  rpc IssueRefreshToken(IssueRefreshTokenRequest) returns (TokenResponse);
  rpc IssueM2MToken(IssueM2MTokenRequest) returns (TokenResponse);
  
  // Token validation & introspection
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc IntrospectToken(IntrospectTokenRequest) returns (IntrospectTokenResponse);
  
  // Token revocation
  rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse);
  rpc RevokeAllUserTokens(RevokeAllUserTokensRequest) returns (RevokeTokenResponse);
  
  // Token refresh
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse);
  
  // Health check
  rpc Health(HealthRequest) returns (HealthResponse);
}

// Issue Access Token
message IssueAccessTokenRequest {
  string user_id = 1;
  repeated string scopes = 2;
  int32 expires_in_seconds = 3;
  map<string, string> claims = 4; // custom claims
  string audience = 5;
  string issuer = 6;
}

message IssueRefreshTokenRequest {
  string user_id = 1;
  int32 expires_in_seconds = 2;
  repeated string scope = 3;
}

message IssueM2MTokenRequest {
  string client_id = 1;
  repeated string scopes = 2;
  int32 expires_in_seconds = 3;
  string audience = 4;
}

message TokenResponse {
  string access_token = 1;
  string token_type = 2; // "Bearer"
  int32 expires_in = 3;
  string refresh_token = 4;
  string scope = 5;
  map<string, string> metadata = 6;
}

// Validate Token
message ValidateTokenRequest {
  string token = 1;
  bool check_revocation = 2;
}

message ValidateTokenResponse {
  bool valid = 1;
  bool expired = 2;
  TokenClaims claims = 3;
  string error = 4;
}

message TokenClaims {
  string sub = 1; // subject (user_id)
  string aud = 2; // audience
  string iss = 3; // issuer
  int64 exp = 4; // expiration time (Unix timestamp)
  int64 iat = 5; // issued at (Unix timestamp)
  int64 nbf = 6; // not before (Unix timestamp)
  repeated string scopes = 7;
  map<string, string> custom_claims = 8;
}

// Introspect Token (OAuth 2.0 token introspection)
message IntrospectTokenRequest {
  string token = 1;
  string token_type_hint = 2; // "access_token" | "refresh_token"
}

message IntrospectTokenResponse {
  bool active = 1;
  string scope = 2;
  string client_id = 3;
  string username = 4;
  string token_type = 5;
  int64 exp = 6;
  int64 iat = 7;
  int64 nbf = 8;
  string sub = 9;
  string aud = 10;
  string iss = 11;
  string jti = 12; // JWT ID
}

// Revoke Token
message RevokeTokenRequest {
  string token = 1;
  string reason = 2; // "USER_LOGOUT" | "PASSWORD_RESET" | "ACCOUNT_COMPROMISE"
}

message RevokeTokenResponse {
  bool success = 1;
  string revocation_id = 2;
}

message RevokeAllUserTokensRequest {
  string user_id = 1;
  string reason = 2;
  bool exclude_current_session = 3;
}

// Refresh Token
message RefreshTokenRequest {
  string refresh_token = 1;
  repeated string scopes = 2;
}

message HealthRequest {}
message HealthResponse {
  string status = 1;
}
